# HealpixViewer

./: .gitignore  Info.plist  Makefile.am  Makefile.in  README  configure  configure.ac  healpixviewer.icns  mac_deploy  mainwindow.ui
Skyviewer/: Makefile  Skyviewer  Skyviewer-mac.pro  Skyviewer.pro  blockingqueue.h  boundary.cpp  colormap.cpp  colortable.cpp  colortable.h  configs.h  define_colortable.h  face.cpp  face.h  facecache.cpp  facecache.h  facevertices.cpp  facevertices.h  fieldmap.cpp  fieldmap.h  grid.cpp  grid.h  healpixmap.cpp  healpixmap.h  healpixutil.h  histogram.cpp  histogram.h  histogramviewer.cpp  histogramviewer.h  histogramwidget.cpp  histogramwidget.h  histogramwidget.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  maploader.cpp  maploader.h  mapoptions.ui  mapoverlay.cpp  mapoverlay.h  (+27 more)
colormaps/: 16level.tbl  beach.tbl  blue_green_red_yellow.tbl  blue_pastel_red.tbl  blue_red.tbl  blue_waves.tbl  blue_white.tbl  bw_linear.tbl  eos_a.tbl  eos_b.tbl  green_pink.tbl  grn_red_blu_wht.tbl  grn_white_exp.tbl  grn_white_linear.tbl  hardcandy.tbl  haze.tbl  hue_sat_light_1.tbl  hue_sat_light_2.tbl  hue_sat_val_1.tbl  hue_sat_val_2.tbl  mac_style.tbl  nature.tbl  ocean.tbl  pastels.tbl  peppermint.tbl  plasma.tbl  prism.tbl  purple_red_stripes.tbl  rainbow.tbl  rainbow1.tbl  rainbow18.tbl  rainbow_black.tbl  rainbow_white.tbl  red_purple.tbl  red_temperature.tbl  stdgamma.tbl  steps.tbl  stern_special.tbl  volcano.tbl  waves.tbl
src/: .gitignore  Skyviewer.pro  base.hpp  boundary.h  colormap.cpp  colormap.h  config.h.in  configs.h  coordinatesystem.cpp  coordinatesystem.h  coordinatesystem.ui  define_colortable.h  exceptions.h  face.cpp  face.h  facecache.cpp  facecache.h  facevertices.cpp  facevertices.h  fieldmap.cpp  fieldmap.h  grid.cpp  grid.h  gridoptions.cpp  gridoptions.h  gridoptions.ui  healpixmap.cpp  healpixmap.h  healpixutil.h  histogram.cpp  histogram.h  histogramviewer.cpp  histogramviewer.h  histogramwidget.cpp  histogramwidget.h  histogramwidget.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+36 more)
